# sqltgen

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  STATUS.md  quality-report.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: book.toml  contributor-guide.md  developer-guide.md  user-guide.md
docs/src/: SUMMARY.md  config.md  contributing.md  examples.md  installation.md  introduction.md  nested-results.md  queries.md  quickstart.md  schema.md  types.md
docs/src/languages/: go.md  java.md  javascript.md  kotlin.md  python.md  rust.md  typescript.md
examples/c/: sqltgen.json
examples/common/mysql/: Dockerfile  Makefile  docker-compose.yml  grant-all.sql  queries.sql
examples/common/postgresql/: Dockerfile  Makefile  docker-compose.yml  queries.sql
examples/common/sqlite/: queries.sql
examples/cpp/: queries.sql  schema.sql  sqltgen.json
examples/cpp/mysql/: Dockerfile  Makefile  docker-compose.yml  main.cpp  sqltgen.json
examples/cpp/postgresql/: Dockerfile  Makefile  docker-compose.yml  main.cpp  sqltgen.json
examples/cpp/sqlite/: Dockerfile  docker-compose.yml  main.cpp  sqltgen.json
examples/go/: Makefile
examples/go/postgresql/: .gitignore  Makefile  go.mod  go.sum  main.go  sqltgen.json
examples/go/sqlite/: .gitignore  Makefile  go.mod  go.sum  main.go  sqltgen.json
examples/java/: Makefile  pom.xml  queries.sql  schema.sql  sqlt-postgresql.json  sqlt-sqlite.json  sqlt.json  sqltgen-postgresql.json  sqltgen-sqlite.json
examples/java/mysql/: Makefile  pom.xml  sqltgen.json
examples/java/postgresql/: Makefile  pom.xml  sqltgen.json
examples/java/sqlite/: Makefile  pom.xml  sqltgen.json
examples/javascript/mysql/: Makefile  main.js  package-lock.json  package.json  sqltgen.json
examples/javascript/postgresql/: Makefile  main.js  package-lock.json  package.json  sqltgen.json
examples/javascript/sqlite/: Makefile  main.js  package-lock.json  package.json  sqltgen.json
examples/kotlin/: Makefile  pom.xml  queries.sql  sqlt.json  sqltgen-postgresql.json  sqltgen-sqlite.json
examples/kotlin/mysql/: .gitignore  Makefile  pom.xml  sqltgen.json
examples/kotlin/postgresql/: Makefile  pom.xml  sqltgen.json
examples/kotlin/sqlite/: Makefile  pom.xml  sqltgen.json
examples/postgresql/: queries.sql
examples/python/mysql/: Makefile  main.py  requirements.txt  sqltgen.json
examples/python/postgresql/: Makefile  main.py  requirements.txt  sqltgen.json
examples/python/sqlite/: Makefile  main.py  sqltgen.json
examples/rust/: .env  Cargo.toml  Makefile  docker-compose.yml  sqlt-postgresql.json  sqlt-sqlite.json  sqlt.json  sqltgen-postgresql.json  sqltgen-sqlite.json
examples/rust/mysql/: .env  .gitignore  Cargo.toml  Makefile  sqltgen.json
examples/rust/mysql/src/: main.rs
examples/rust/mysql/src/db/: customer.rs  mod.rs  queries.rs
examples/rust/mysql/src/db/queries/: queries.rs
examples/rust/postgresql/: .env  Cargo.toml  Makefile  sqltgen.json
examples/rust/postgresql/src/: main.rs
examples/rust/postgresql/src/db/: queries.rs
examples/rust/postgresql/src/db/models/: author.rs  book.rs  genre.rs  mod.rs
examples/rust/postgresql/src/db/queries/: queries.rs
examples/rust/sqlite/: Cargo.toml  Makefile  sqltgen.json
examples/rust/sqlite/src/: main.rs
examples/rust/sqlite/src/db/: queries.rs  sale.rs
examples/rust/sqlite/src/db/models/: customer.rs  mod.rs  sale.rs
examples/rust/sqlite/src/db/queries/: queries.rs
examples/rust/src/: main.rs
examples/rust/src/db/: queries.rs
examples/rust/src/db/pg/: book.rs  posts.rs  queries.rs  sale_item.rs
examples/rust/src/db/sqlite/: mod.rs  posts.rs  queries.rs  sale_item.rs  users.rs
examples/sqlite/: schema.sql
examples/typescript/: Makefile
examples/typescript/mysql/: Makefile  main.ts  package-lock.json  package.json  sqltgen.json
examples/typescript/postgresql/: Makefile  main.ts  package-lock.json  package.json  sqltgen.json
examples/typescript/sqlite/: Makefile  main.ts  package-lock.json  package.json  sqltgen.json
legal/: AUTHORS  NOTICE  README.md  TRADEMARKS.md
scripts/e2e_testgen/: codegen.py  manifest.py  mypy.ini  orchestrate.py  requirements.txt  scaffold.py  test_spec.py
scripts/e2e_testgen/literals/: go.py  java.py  javascript.py  kotlin.py  (+5 more)
src/: config.rs  lib.rs  main.rs
src/backend/: c.rs  common.rs  go.rs  java.rs  jdbc.rs  kotlin.rs  list_strategy.rs  manifest.rs  mod.rs  naming.rs  python.rs  rust.rs  sql_rewrite.rs  test_helpers.rs  typescript.rs
src/frontend/: common.rs  mod.rs
src/ir/: mod.rs  query.rs  schema.rs  types.rs
tests/e2e/: check_suite.py  main.rs
tests/e2e/runtime-new/type_overrides/rust/postgresql/: Cargo.toml  sqltgen.json
tests/e2e/runtime-new/type_overrides/rust/sqlite/: Cargo.toml  sqltgen.json
tests/e2e/runtime/bookstore/cpp/sqlite/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  runtime_test.cpp  sqltgen.json
tests/e2e/runtime/bookstore/rust/sqlite/: Cargo.toml  Makefile
tests/e2e/runtime/bookstore/rust/sqlite/tests/: runtime.rs
tests/e2e/runtime/enums/rust/postgresql/: .gitignore  Cargo.toml
tests/e2e/runtime/enums/rust/postgresql/tests/: runtime_gen.rs
tests/e2e/runtime/schema_qualified/rust/postgresql/: Cargo.toml  Makefile  sqltgen.json
tests/e2e/runtime/schema_qualified/rust/postgresql/tests/: runtime_gen.rs
tests/e2e/runtime/type_overrides/rust/postgresql/: .gitignore  Cargo.toml  Makefile  sqltgen-chrono.json  sqltgen.json
tests/e2e/runtime/type_overrides/rust/postgresql/src/db/: queries.rs
tests/e2e/runtime/type_overrides/rust/postgresql/src_chrono/db/: queries.rs
tests/e2e/runtime/type_overrides/rust/postgresql/src_chrono/db/models/: event.rs
tests/e2e/runtime/type_overrides/rust/postgresql/src_chrono/db/queries/: queries.rs
tests/e2e/runtime/type_overrides/rust/postgresql/tests/: chrono_runtime.rs  runtime.rs  runtime_gen.rs
xtask/: Cargo.toml
xtask/src/: main.rs  ratchet.rs  report.rs
xtask/src/collectors/: mod.rs  structural.rs
(+1010 files in other folders)
