[package]
name = "sqltgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqltgen"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
glob      = "0.3"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.61"
