[workspace]
members = [".", "xtask"]
default-members = ["."]

[package]
name = "sqltgen"
version = "0.0.20260310"
edition = "2021"

[lib]
name = "sqltgen"
path = "src/lib.rs"

[[bin]]
name = "sqltgen"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
glob      = "0.3"
indoc     = "2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.61"
