[package]
name = "sqltgen-rust-mysql-example"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx         = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "time", "json", "rust_decimal"] }
tokio        = { version = "1",   features = ["full"] }
time         = "0.3"
rust_decimal = "1"
dotenvy      = "0.15"
