        [package]
        name = "e2e-type_overrides-rust-postgresql"
        version = "0.1.0"
        edition = "2021"
        publish = false

        [dependencies]
        serde_json = "1"
        sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "time", "rust_decimal", "uuid"] }
        rust_decimal = "1"
time = "0.3"
uuid = { version = "1", features = ["v4"] }
        tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
