        [package]
        name = "e2e-type_overrides-rust-sqlite"
        version = "0.1.0"
        edition = "2021"
        publish = false

        [dependencies]
        serde_json = "1"
        sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
        time = "0.3"
uuid = { version = "1", features = ["v4"] }
        tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
