[package]
name = "e2e-rust-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
time = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
