[package]
name = "e2e-schema-qualified-rust-postgresql"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
