[package]
name = "e2e-type-overrides-rust-postgresql"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "runtime"
path = "tests/runtime.rs"

[[test]]
name = "chrono_runtime"
path = "tests/chrono_runtime.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "time", "uuid", "chrono"] }
serde_json = "1"
time = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
